Updated follow us on GitHub link to new repo

--- a/container/web/static/index.html
+++ b/container/web/static/index.html
@@ -33,7 +33,7 @@
         </div>
         <div id="navbar" class="navbar-collapse collapse">
             <form class="navbar-form navbar-right">
-                <a target="_blank" href="https://github.com/gary-yang/PureElk" class="btn btn-success">Follow us at GitHub</a>
+                <a target="_blank" href="https://github.com/pureelk/pureelk" class="btn btn-success">Follow us on GitHub</a>
             </form>
         </div>
     </div>
