Update the welcome screen and icon Add the edit feature to allow updating the retention/collection interval etc.

--- a/container/web/static/index.html
+++ b/container/web/static/index.html
@@ -29,6 +29,7 @@
                 <span class="icon-bar"></span>
                 <span class="icon-bar"></span>
             </button>
+            <img style="float:left; margin-right:5px" src="img/pureelk-64x64.png"/>
             <a class="navbar-brand" href="#">PureELK</a>
         </div>
         <div id="navbar" class="navbar-collapse collapse">
